--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 </head>
 <body>
     <!-- Mobile Header -->
@@ -38,10 +43,10 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="teams.html" class="nav-link">Teams</a>
-                <a href="players.html" class="nav-link">Players</a>
-                <a href="news.html" class="nav-link">News</a>
-                <a href="about.html" class="nav-link">About</a>
+                <a href="pages/teams.html" class="nav-link">Teams</a>
+                <a href="pages/players.html" class="nav-link">Players</a>
+                <a href="pages/news.html" class="nav-link">News</a>
+                <a href="pages/about.html" class="nav-link">About</a>
             </nav>
             <div class="search-box">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
