--- a/pages/authentication.html
+++ b/pages/authentication.html
@@ -9,9 +9,45 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body class="auth-page">
     <div class="auth-container">
+        <!-- Desktop Header -->
+    <header class="desktop-header">
+        <div class="header-content">
+            <div class="logo-container">
+                <img src="images/logo.svg" alt="Uganda Footy Hub" class="logo" onerror="this.style.display='none'">
+                <span class="logo-text">Uganda Footy Hub</span>
+            </div>
+            <nav class="main-nav">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="timeline.html" class="nav-link">Timeline</a>
+                <a href="pages/teams.html" class="nav-link active">Teams</a>
+                <a href="pages/players.html" class="nav-link">Players</a>
+                <a href="pages/news.html" class="nav-link">News</a>
+                <a href="pages/about.html" class="nav-link">About</a>
+                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
+            </nav>
+            <div class="header-actions">
+                <div class="search-box">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <path d="m21 21-4.35-4.35"></path>
+                    </svg>
+                    <input type="text" placeholder="Search..." id="desktopSearch">
+                </div>
+                <a href="authentication.html" class="user-btn" id="userBtn">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="12" cy="7" r="4"></circle>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </header>
         <!-- Left Side - Branding -->
         <div class="auth-brand">
             <div class="auth-brand-content">
