--- a/pages/news.html
+++ b/pages/news.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/about.css">    
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body>
     <!-- Mobile Header -->
@@ -74,11 +76,11 @@
     <nav class="mobile-menu" id="mobileMenu">
         <a href="index.html" class="mobile-menu-link">Home</a>
         <a href="timeline.html" class="mobile-menu-link">Timeline</a>
-        <a href="teams.html" class="mobile-menu-link">Teams</a>
-        <a href="players.html" class="mobile-menu-link">Players</a>
-        <a href="news.html" class="mobile-menu-link active">News</a>
-        <a href="about.html" class="mobile-menu-link">About</a>
-        <a href="authentication.html" class="mobile-menu-link">Login / Sign Up</a>
+        <a href="pages/teams.html" class="mobile-menu-link">Teams</a>
+        <a href="pages/players.html" class="mobile-menu-link">Players</a>
+        <a href="pages/news.html" class="mobile-menu-link active">News</a>
+        <a href="pages/about.html" class="mobile-menu-link">About</a>
+        <a href="pages/authentication.html" class="mobile-menu-link">Login / Sign Up</a>
     </nav>
 
     <main class="news-page">
