--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 <a href="pages/players.html" class="nav-link">Players</a>
                 <a href="pages/news.html" class="nav-link">News</a>
                 <a href="pages/about.html" class="nav-link">About</a>
+                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
+                <a href="pages/player-detail.html" class="nav-link">Player Detail</a>
+                <a href="pages/news-detail.html" class="nav-link">News Detail</a>
+                    
             </nav>
             <div class="search-box">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
