--- a/pages/authentication.html
+++ b/pages/authentication.html
@@ -30,6 +30,8 @@
                 <a href="pages/about.html" class="nav-link">About</a>
                 <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
                 <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
+                <a href="pages/player-detail.html" class="nav-link">Player Detail</a>
+                <a href="pages/news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
