--- a/pages/news.html
+++ b/pages/news.html
@@ -44,6 +44,10 @@
                 <a href="players.html" class="nav-link">Players</a>
                 <a href="news.html" class="nav-link active">News</a>
                 <a href="about.html" class="nav-link">About</a>
+                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="team-detail.html" class="nav-link">Team Detail</a>
+                <a href="player-detail.html" class="nav-link">Player Detail</a>
+                <a href="news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
