--- a/timeline.html
+++ b/timeline.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/timeline.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">    
 </head>
 <body>
     <!-- Mobile Header -->
@@ -37,10 +45,14 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link active">Timeline</a>
-                <a href="teams.html" class="nav-link">Teams</a>
-                <a href="players.html" class="nav-link">Players</a>
-                <a href="news.html" class="nav-link">News</a>
-                <a href="about.html" class="nav-link">About</a>
+                <a href="pages/teams.html" class="nav-link">Teams</a>
+                <a href="pages/players.html" class="nav-link">Players</a>
+                <a href="pages/news.html" class="nav-link">News</a>
+                <a href="pages/about.html" class="nav-link">About</a>
+                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
+                <a href="pages/player-detail.html" class="nav-link">Player Detail</a>
+                <a href="pages/news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="search-box">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
