--- a/authentication.html
+++ b/authentication.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login or Sign Up to Uganda Footy Hub">
     <title>Authentication - Uganda Footy Hub</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/auth.css">
-    <link rel="stylesheet" href="css/about.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body class="auth-page">
@@ -24,14 +20,14 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="pages/teams.html" class="nav-link active">Teams</a>
-                <a href="pages/players.html" class="nav-link">Players</a>
-                <a href="pages/news.html" class="nav-link">News</a>
-                <a href="pages/about.html" class="nav-link">About</a>
-                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
-                <a href="pages/player-detail.html" class="nav-link">Player Detail</a>
-                <a href="pages/news-detail.html" class="nav-link">News Detail</a>
+                <a href="teams.html" class="nav-link active">Teams</a>
+                <a href="players.html" class="nav-link">Players</a>
+                <a href="news.html" class="nav-link">News</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="team-detail.html" class="nav-link">Team Detail</a>
+                <a href="player-detail.html" class="nav-link">Player Detail</a>
+                <a href="news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
@@ -285,6 +281,6 @@
         </div>
     </div>
 
-    <script src="js/authentication.js" type="module"></script>
+    <script src="java-script/authentication.js" type="module"></script>
 </body>
 </html>
