--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="pages/teams.html" class="nav-link">Teams</a>
-                <a href="pages/players.html" class="nav-link">Players</a>
-                <a href="pages/news.html" class="nav-link">News</a>
-                <a href="pages/about.html" class="nav-link active">About</a>
+                <a href="teams.html" class="nav-link">Teams</a>
+                <a href="players.html" class="nav-link">Players</a>
+                <a href="news.html" class="nav-link">News</a>
+                <a href="about.html" class="nav-link active">About</a>
             </nav>
             <div class="header-actions">
                 <a href="authentication.html" class="user-btn">
@@ -185,7 +185,7 @@
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem;">
                     <div>
                         <h4 style="color: var(--text-color); margin-bottom: 0.5rem;">📧 Email</h4>
-                        <a href="mailto:kenneth.maberi@example.com" style="color: var(--primary-color);">kenneth.maberi@example.com</a>
+                        <a href="mailto:kenneth.maberi@gmail.com" style="color: var(--primary-color);">kennethmaberi@gmail.com</a>
                     </div>
                     <div>
                         <h4 style="color: var(--text-color); margin-bottom: 0.5rem;">🐙 GitHub</h4>
@@ -239,8 +239,4 @@ Generated: ${new Date().toLocaleDateString()}
         });
     </script>
 </body>
-</html>;">🏆 FUFA (Federation of Uganda Football Associations)</h4>
-                        <p style="color: #6b7280; margin: 0;">Official football governing body providing league information, historical records, and official statistics.</p>
-                    </div>
-                    <div>
-                        <h4 style="color: var(--text-color); margin-bottom: 0.75rem
+</html>
