--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="data/manifest.json">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -43,15 +43,16 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link active">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="pages/teams.html" class="nav-link">Teams</a>
-                <a href="pages/players.html" class="nav-link">Players</a>
-                <a href="pages/news.html" class="nav-link">News</a>
-                <a href="pages/about.html" class="nav-link">About</a>
-                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
-                <a href="pages/player-detail.html" class="nav-link">Player Detail</a>
-                <a href="pages/news-detail.html" class="nav-link">News Detail</a>
-                    
+                <a href="teams.html" class="nav-link">Teams</a>
+                <a href="players.html" class="nav-link">Players</a>
+                <a href="news.html" class="nav-link">News</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="team-detail.html" class="nav-link">Team Detail</a>
+                <a href="player-detail.html" class="nav-link">Player Detail</a>
+                <a href="news-detail.html" class="nav-link">News Detail</a>
+
+
             </nav>
             <div class="search-box">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -187,6 +188,6 @@
         </a>
     </nav>
 
-    <script src="js/app.js" type="module"></script>
+    <script src="java-script/app.js" type="module"></script>
 </body>
 </html>
