--- a/team-detail.html
+++ b/team-detail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/teams.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/team-detail.css">
 
 
 
@@ -47,12 +47,12 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="pages/teams.html" class="nav-link active">Teams</a>
-                <a href="pages/players.html" class="nav-link">Players</a>
-                <a href="pages/news.html" class="nav-link">News</a>
-                <a href="pages/about.html" class="nav-link">About</a>
-                <a href="pages/authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="pages/team-detail.html" class="nav-link">Team Detail</a>
+                <a href="teams.html" class="nav-link active">Teams</a>
+                <a href="players.html" class="nav-link">Players</a>
+                <a href="news.html" class="nav-link">News</a>
+                <a href="about.html" class="nav-link">About</a>
+                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
+                <a href="team-detail.html" class="nav-link">Team Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
@@ -270,6 +270,6 @@
         </a>
     </nav>
 
-    <script src="js/team-detail.js" type="module"></script>
+    <script src="java-script/team-detail.js" type="module"></script>
 </body>
 </html>
