--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
                 <a href="players.html" class="nav-link">Players</a>
                 <a href="news.html" class="nav-link">News</a>
                 <a href="about.html" class="nav-link active">About</a>
+                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
             </nav>
             <div class="header-actions">
                 <a href="authentication.html" class="user-btn">
@@ -238,5 +239,6 @@ Generated: ${new Date().toLocaleDateString()}
             URL.revokeObjectURL(url);
         });
     </script>
+    <script src="java-script/menu.js" type="module"></script>
 </body>
 </html>
