--- a/authentication.html
+++ b/authentication.html
@@ -20,14 +20,11 @@
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
-                <a href="teams.html" class="nav-link active">Teams</a>
+                <a href="teams.html" class="nav-link">Teams</a>
                 <a href="players.html" class="nav-link">Players</a>
                 <a href="news.html" class="nav-link">News</a>
                 <a href="about.html" class="nav-link">About</a>
-                <a href="authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="team-detail.html" class="nav-link">Team Detail</a>
-                <a href="player-detail.html" class="nav-link">Player Detail</a>
-                <a href="news-detail.html" class="nav-link">News Detail</a>
+                <a href="authentication.html" class="nav-link active">Login / Sign Up</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
