--- a/index.html
+++ b/index.html
@@ -48,11 +48,6 @@
                 <a href="news.html" class="nav-link">News</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="team-detail.html" class="nav-link">Team Detail</a>
-                <a href="player-detail.html" class="nav-link">Player Detail</a>
-                <a href="news-detail.html" class="nav-link">News Detail</a>
-
-
             </nav>
             <div class="search-box">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -189,5 +184,6 @@
     </nav>
 
     <script src="java-script/app.js" type="module"></script>
+    <script src="java-script/menu.js" type="module"></script>
 </body>
 </html>
