--- a/team-detail.html
+++ b/team-detail.html
@@ -52,7 +52,6 @@
                 <a href="news.html" class="nav-link">News</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="team-detail.html" class="nav-link">Team Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
@@ -271,5 +270,6 @@
     </nav>
 
     <script src="java-script/team-detail.js" type="module"></script>
+    <script src="java-script/menu.js" type="module"></script>
 </body>
 </html>
