--- a/teams.html
+++ b/teams.html
@@ -17,10 +17,10 @@
         <button class="menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
             <span class="hamburger"></span>
         </button>
-        <div class="logo-container">
+        <a href="index.html" class="logo-container">
             <img src="images/logo.svg" alt="Uganda Footy Hub" class="logo" onerror="this.style.display='none'">
             <span class="logo-text">Teams</span>
-        </div>
+        </a>
         <button class="search-toggle" id="mobileSearchToggle" aria-label="Toggle search">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <circle cx="11" cy="11" r="8"></circle>
@@ -32,10 +32,10 @@
     <!-- Desktop Header -->
     <header class="desktop-header">
         <div class="header-content">
-            <div class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="images/logo.svg" alt="Uganda Footy Hub" class="logo" onerror="this.style.display='none'">
                 <span class="logo-text">Uganda Footy Hub</span>
-            </div>
+            </a>
             <nav class="main-nav">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="timeline.html" class="nav-link">Timeline</a>
@@ -44,9 +44,6 @@
                 <a href="news.html" class="nav-link">News</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="team-detail.html" class="nav-link">Team Detail</a>
-                <a href="player-detail.html" class="nav-link">Player Detail</a>
-                <a href="news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
@@ -187,5 +184,6 @@
     </nav>
 
     <script src="java-script/teams.js" type="module"></script>
+    <script src="java-script/menu.js" type="module"></script>
 </body>
 </html>
