--- a/news.html
+++ b/news.html
@@ -45,9 +45,6 @@
                 <a href="news.html" class="nav-link active">News</a>
                 <a href="about.html" class="nav-link">About</a>
                 <a href="authentication.html" class="nav-link">Login / Sign Up</a>
-                <a href="team-detail.html" class="nav-link">Team Detail</a>
-                <a href="player-detail.html" class="nav-link">Player Detail</a>
-                <a href="news-detail.html" class="nav-link">News Detail</a>
             </nav>
             <div class="header-actions">
                 <div class="search-box">
@@ -207,6 +204,6 @@
     
     <script src="java-script/news.js" type="module"></script>
     <script src="java-script/search.js" type="module"></script>
-    <script src="java-script/app.js" type="module"></script>
+    <script src="java-script/menu.js" type="module"></script>
 </body>
 </html>
