--- a/players.html
+++ b/players.html
@@ -5,64 +5,15 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Player Profile — Football</title>
   <meta name="description" content="Player profile page with responsive layout, stats, timeline and match history." />
-  <style>
-    :root{
-      --accent: #0b6cff;
-      --muted:#6b7280;
-      --card:#ffffff;
-      --bg:#f5f7fb;
-      --radius:14px;
-      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    html,body{height:100%;margin:0;background:var(--bg);color:#0f172a}
-    .container{max-width:1100px;margin:28px auto;padding:20px}
-    .card{background:var(--card);border-radius:var(--radius);box-shadow:0 6px 20px rgba(12,20,40,0.06);padding:18px}
-
-    /* header */
-    .player-hero{display:grid;grid-template-columns: 180px 1fr;gap:18px;align-items:center}
-    .avatar{width:180px;height:180px;border-radius:12px;overflow:hidden;flex:0 0 180px}
-    .avatar img{width:100%;height:100%;object-fit:cover;display:block}
-    .player-title h1{margin:0;font-size:1.6rem}
-    .player-title p{margin:6px 0;color:var(--muted)}
-    .badge{display:inline-block;padding:6px 10px;border-radius:999px;background:linear-gradient(90deg,var(--accent),#36a3ff);color:white;font-weight:600;font-size:0.85rem}
-
-    /* stats grid */
-    .stats-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:12px;margin-top:12px}
-    .stat{background:#f8fafc;padding:12px;border-radius:12px;text-align:center}
-    .stat strong{display:block;font-size:1.15rem}
-    .muted{color:var(--muted);font-size:0.9rem}
-
-    /* layout */
-    .main-grid{display:grid;grid-template-columns:1fr 360px;gap:18px;margin-top:18px}
-    .timeline{list-style:none;padding:0;margin:0}
-    .timeline li{padding:10px 0;border-bottom:1px dashed #e6e9ef}
-    .timeline time{display:block;color:var(--muted);font-size:0.85rem}
-
-    table{width:100%;border-collapse:collapse}
-    th,td{padding:8px 10px;text-align:left;border-bottom:1px solid #eef2f7}
-    th{background:#fbfdff}
-
-    /* responsiveness */
-    @media (max-width:900px){
-      .player-hero{grid-template-columns:120px 1fr}
-      .avatar{width:120px;height:120px}
-      .stats-grid{grid-template-columns:repeat(2,1fr)}
-      .main-grid{grid-template-columns:1fr}
-    }
-    @media (max-width:420px){
-      .stats-grid{grid-template-columns:repeat(2,1fr);gap:8px}
-    }
-
-    /* small helpers */
-    .heading{font-weight:700;margin:0 0 8px 0}
-    .muted-block{color:var(--muted);font-size:0.95rem}
-
-    /* bottom nav helpers */
-    .bottom-nav a{display:flex;flex-direction:column;align-items:center;text-decoration:none;color:inherit;font-size:12px}
-    .bottom-nav svg{display:block;margin-bottom:4px}
-  </style>
+  
+  <!-- Base styles -->
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/layout.css" />
+  
+  <!-- Page-specific styles -->
+  <link rel="stylesheet" href="css/players.css" />
 </head>
-<body>
+<body class="players-page">
   <div class="container">
     <!-- Player hero card -->
     <section class="card player-hero" id="player-hero">
@@ -118,7 +69,7 @@
 
         <section class="card" style="margin-top:14px" aria-labelledby="history-heading">
           <h2 id="history-heading" class="heading">Recent Matches</h2>
-          <table aria-describedby="history-heading">
+          <table class="match-table" aria-describedby="history-heading">
             <thead>
               <tr><th>Date</th><th>Opponent</th><th>Competition</th><th>Minutes</th><th>Rating</th></tr>
             </thead>
@@ -129,7 +80,7 @@
         </section>
       </main>
 
-      <aside>
+      <aside class="player-details">
         <div class="card" aria-labelledby="contact-heading">
           <h3 id="contact-heading" class="heading">Details</h3>
           <p class="muted">Club: <strong id="player-club">N/A</strong></p>
