--- a/about.html
+++ b/about.html
@@ -179,6 +179,29 @@
                 </div>
             </section>
 
+            <!-- Player Acknowledgments -->
+            <section class="content-card" style="margin-bottom: 3rem;">
+                <h2 style="color: var(--primary-color); margin-bottom: 1.5rem;">⚽ Featured Players</h2>
+                <p style="color: #6b7280; margin-bottom: 1.5rem; line-height: 1.7;">We're proud to showcase some of Uganda's most talented football players who continue to inspire fans across the nation.</p>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1.5rem;">
+                    <div style="text-align: center; padding: 1rem;">
+                        <img src="images/players/Allan-Okello.jpg" alt="Allan Okello" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary-color); margin-bottom: 1rem; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" onerror="this.style.display='none'">
+                        <h4 style="color: var(--text-color); margin-bottom: 0.25rem;">Allan Okello</h4>
+                        <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">KCCA FC Midfielder</p>
+                    </div>
+                    <div style="text-align: center; padding: 1rem;">
+                        <img src="images/players/emanuel-okwi.png" alt="Emanuel Okwi" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary-color); margin-bottom: 1rem; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" onerror="this.style.display='none'">
+                        <h4 style="color: var(--text-color); margin-bottom: 0.25rem;">Emanuel Okwi</h4>
+                        <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">National Team Forward</p>
+                    </div>
+                    <div style="text-align: center; padding: 1rem;">
+                        <img src="images/players/derrick-nsibambi.png" alt="Derrick Nsibambi" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary-color); margin-bottom: 1rem; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" onerror="this.style.display='none'">
+                        <h4 style="color: var(--text-color); margin-bottom: 0.25rem;">Derrick Nsibambi</h4>
+                        <p style="color: #6b7280; font-size: 0.875rem; margin: 0;">KCCA FC Striker</p>
+                    </div>
+                </div>
+            </section>
+            
             <!-- Contact -->
             <section class="content-card">
                 <h2 style="color: var(--primary-color); margin-bottom: 1.5rem;">📧 Contact & Feedback</h2>
