--- a/authentication.html
+++ b/authentication.html
@@ -5,10 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login or Sign Up to Uganda Footy Hub">
     <title>Authentication - Uganda Footy Hub</title>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/auth.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 </head>
 <body class="auth-page">
+    <!-- Mobile Header -->
+    <header class="mobile-header">
+        <button class="menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">
+            <span class="hamburger"></span>
+        </button>
+        <div class="logo-container">
+            <img src="images/logo.svg" alt="Uganda Footy Hub" class="logo" onerror="this.style.display='none'">
+            <span class="logo-text">Uganda Footy</span>
+        </div>
+        <a href="index.html" class="close-btn-mobile" aria-label="Go to Home">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            </svg>
+        </a>
+    </header>
+
+    <!-- Mobile Menu -->
+    <nav class="mobile-menu" id="mobileMenu">
+        <a href="index.html" class="mobile-menu-link">Home</a>
+        <a href="timeline.html" class="mobile-menu-link">Timeline</a>
+        <a href="teams.html" class="mobile-menu-link">Teams</a>
+        <a href="players.html" class="mobile-menu-link">Players</a>
+        <a href="news.html" class="mobile-menu-link">News</a>
+        <a href="about.html" class="mobile-menu-link">About</a>
+    </nav>
+
     <div class="auth-container">
         <!-- Desktop Header -->
     <header class="desktop-header">
@@ -278,6 +307,7 @@
         </div>
     </div>
 
+    <script src="java-script/menu.js" type="module"></script>
     <script src="java-script/authentication.js" type="module"></script>
 </body>
 </html>
