--- a/players.html
+++ b/players.html
@@ -12,6 +12,7 @@
   
   <!-- Page-specific styles -->
   <link rel="stylesheet" href="css/players.css" />
+  <link rel="stylesheet" href="css/image-styles.css" />
 </head>
 <body class="players-page">
   <div class="container">
@@ -20,9 +21,12 @@
       <div class="avatar" id="avatar-wrap">
         <!-- prefer WebP but provide fallback -->
         <picture>
-          <source srcset="images/players/placeholder.webp" type="image/webp">
-          <img src="images/players/placeholder.jpg" alt="Player photo" id="player-photo">
+          <source srcset="images/players/derrick-nsibambi.webp" type="image/webp">
+          <img src="images/players/derrick-nsibambi.png" alt="Player photo" id="player-photo" onerror="this.style.display='none'; this.parentElement.nextElementSibling.style.display='flex'">
         </picture>
+        <div class="player-avatar-fallback" style="display: none; align-items: center; justify-content: center; background: linear-gradient(135deg, #0b6cff, #4f46e5); color: white; font-size: 2rem; border-radius: 50%; width: 100px; height: 100px;">
+          ⚽
+        </div>
       </div>
 
       <div class="player-title">
