--- a/team-detail.html
+++ b/team-detail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/teams.css">
     <link rel="stylesheet" href="css/team-detail.css">
+    <link rel="stylesheet" href="css/image-styles.css">
 
 
 
@@ -74,7 +75,10 @@
     <main class="team-detail-page">
         <!-- Team Header -->
         <section class="team-header">
-            <div class="team-header-bg"></div>
+            <div class="team-header-bg">
+                <img src="images/stadiums/kcca-omondi-stadium.jpg" alt="Stadium Background" class="stadium-bg" onerror="console.log('Background stadium failed:', this.src); this.style.display='none'">
+                <div class="header-overlay"></div>
+            </div>
             <div class="container">
                 <div class="team-header-content">
                     <div class="team-badge-large" id="teamBadge">
@@ -181,10 +185,22 @@
 
                         <div class="content-card">
                             <h3>Stadium Information</h3>
-                            <div class="stadium-info">
-                                <p><strong>Name:</strong> <span id="stadiumName">-</span></p>
-                                <p><strong>Capacity:</strong> <span id="stadiumCapacity">-</span></p>
-                                <p><strong>Location:</strong> <span id="stadiumLocation">-</span></p>
+                            <div class="stadium-section">
+                                <div class="stadium-image">
+                                    <img src="images/stadiums/st.mary's-stadium.jpg" alt="Team Stadium" class="stadium-photo" onerror="console.log('Stadium photo failed:', this.src); this.style.display='none'; this.nextElementSibling.style.display='flex'">
+                                    <div class="stadium-placeholder" style="display: none;">
+                                        <svg width="60" height="60" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+                                            <path d="M21 15.9999V8C21 6.89543 20.1046 6 19 6L5 6C3.89543 6 3 6.89543 3 8V15.9999C3 17.1045 3.89543 18 5 18H19C20.1046 18 21 17.1045 21 15.9999Z"></path>
+                                            <path d="M7 6V4C7 2.89543 7.89543 2 9 2H15C16.1046 2 17 2.89543 17 4V6"></path>
+                                        </svg>
+                                        <span>Stadium Image</span>
+                                    </div>
+                                </div>
+                                <div class="stadium-info">
+                                    <p><strong>Name:</strong> <span id="stadiumName">-</span></p>
+                                    <p><strong>Capacity:</strong> <span id="stadiumCapacity">-</span></p>
+                                    <p><strong>Location:</strong> <span id="stadiumLocation">-</span></p>
+                                </div>
                             </div>
                         </div>
                     </div>
