--- a/index.html
+++ b/index.html
@@ -106,21 +106,28 @@
             </div>
         </section>
 
-        <!-- Stats Section -->
+        <!-- Stats & Weather Section -->
         <section class="stats-section">
             <div class="container">
-                <div class="stats-grid">
-                    <div class="stat-card">
-                        <div class="stat-number" id="eventsCount">150+</div>
-                        <div class="stat-label">Historic Events</div>
+                <div class="stats-weather-grid">
+                    <div class="stats-grid">
+                        <div class="stat-card">
+                            <div class="stat-number" id="eventsCount">150+</div>
+                            <div class="stat-label">Historic Events</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="teamsCount">25+</div>
+                            <div class="stat-label">Teams</div>
+                        </div>
+                        <div class="stat-card">
+                            <div class="stat-number" id="playersCount">100+</div>
+                            <div class="stat-label">Players</div>
+                        </div>
                     </div>
-                    <div class="stat-card">
-                        <div class="stat-number" id="teamsCount">25+</div>
-                        <div class="stat-label">Teams</div>
-                    </div>
-                    <div class="stat-card">
-                        <div class="stat-number" id="playersCount">100+</div>
-                        <div class="stat-label">Players</div>
+                    <div class="weather-section">
+                        <div id="weatherWidget">
+                            <!-- Weather widget will be populated by JavaScript -->
+                        </div>
                     </div>
                 </div>
             </div>
